test/Fail/Issue998b.err
Issue998b.agda:8.7-10: error: [UnequalTerms]
The terms
  A
and
  Issue998b.A
are not equal at type Set
when checking that the expression d A has type D A
